Fix alignment of index items

--- a/css/item_index.scss
+++ b/css/item_index.scss
@@ -7,6 +7,9 @@ article {
     position: relative;
     margin-bottom: 40px;
     border-left: 1px solid transparent;
+
+    text-align: left;
+
     -webkit-transition: border-left-color .5s;
     transition: border-left-color .5s;
 
